--- a/jose e isa/progrma-o-main/Joseph Programação/index.html
+++ b/jose e isa/progrma-o-main/Joseph Programação/index.html
@@ -132,12 +132,12 @@
         <div class="descrição">
           <img src="img/Estrelinhas.svg" alt="Avaliação 5 estrelas">
           <h3 class="descrição__titulo">Biografia:</h3>
-          <h2 class="descrição__titulo-livro">Juliana Agarikov</h2>
-          <p class="descrição__texto">Analista de sistemas e escritora, Juliana é especialista em Front-End.
+          <h2 class="descrição__titulo-livro">O Caminho </h2>
+          <p class="descrição__texto">O caminho de Deus é profundamente pessoal e único para cada indivíduo. É uma busca contínua por significado, conexão e crescimento espiritual. Não importa onde você esteja nessa jornada, o importante é continuar caminhando, aprendendo e se aproximando cada vez mais do que você entende como divino ou sagrado.
           </p>
         </div>
         <!-- 2º coluna -->
-        <img src="img/Escritora.svg" class="descrição__imagem">
+        <img src="img/9a133044e0f5d6f266698d258e6cc50b.jpg" class="descrição__imagem">
       </div>
 
       <!-- 2º linha -->
@@ -148,7 +148,7 @@
           <li class="botões__item"><img src="img/Compras.svg" alt="Adicionar no carrinho de compras"></li>
         </ul>
         <!-- 2º coluna -->
-        <a href="#" class="botões__ancora">Saiba mais</a>
+        <a href="#" class="botões__ancora">busque obre Entedimento</a>
       </div>
     </div>
 
